# gnupg-pkcs11-scd

./: .gitignore  .svnignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  THANKS  codespell_ignore_words.txt  command.c  command.h  common.c  common.h  configure.ac  dconfig.c  dconfig.h  encoding.c  encoding.h  gnupg-pkcs11-scd.1  gnupg-pkcs11-scd.8  gnupg-pkcs11-scd.conf.example  gnupg-pkcs11-scd.spec.in  keyutil.c  keyutil.h  pkcs11-helper-config.h  pkcs11-helper.c  pkcs11-helper.h  scdaemon.c  scdaemon.h
.github/workflows/: build-linux.yml
distro/: Makefile.am
distro/debian/: Makefile.am  README.Debian  README.build  changelog  control  copyright.m4  rules  watch
distro/rpm/: Makefile.am  gnupg-pkcs11-scd.spec.in
gnupg-pkcs11-scd/: Makefile.am  command.c  command.h  common.c  common.h  dconfig.c  dconfig.h  encoding.c  encoding.h  gnupg-pkcs11-scd.1  gnupg-pkcs11-scd.conf.example  keyutil.c  keyutil.h  scdaemon.c  strgetopt.c  strgetopt.h
gnupg-pkcs11-scd-proxy/: Makefile.am  gnupg-pkcs11-scd-proxy-server.c  gnupg-pkcs11-scd-proxy.1  gnupg-pkcs11-scd-proxy.c  gnupg-pkcs11-scd-proxy.service.in.in
misc/: enroll-token-gnutls.sh  enroll-token-openssl.sh  init-token-gnutls.sh  init-token-openssl.sh  init-token.sh  pinentry-file  softhsm2.conf  vars
